fix: scrollbar jumping issue

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,8 @@ html {
 	font-family: 'Roboto', sans-serif;
 	height: 100%;
 
+	margin-left: calc(100vw - 100%);
+
 	background-color: var(--bg-default);
 }
 
